--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~5.5.3"
   },
   "dependencies": {
+    "@aws-sdk/client-codebuild": "^3.616.0",
     "aws-cdk-lib": "2.148.0",
     "constructs": "^10.0.0",
     "dotenv": "^16.4.5",
